--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (0.36) UNRELEASED; urgency=medium
+
+  * dh-make-ruby: use `FIXME` in Section: when package name is not `ruby-*`,
+    to avoid tools being in section `ruby`.
+
+ -- Antonio Terceiro <terceiro@debian.org>  Fri, 15 Sep 2017 20:31:46 -0300
+
 gem2deb (0.35) unstable; urgency=medium
 
   * dh-make-ruby: bump debian/compat template to 10 (Closes: #867741)
