--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ gem2deb (0.36) UNRELEASED; urgency=medium
     to avoid tools being in section `ruby`.
   * gem2deb-test-runner: drop dependency on dpkg-dev. autopkgtest tests should
     be for installed packages, and pulling development tools is Wrong™.
+  * Apply patch by James Clarke to fix crash when handling build failures in C
+    extensions (Closes: #851172)
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 15 Sep 2017 20:31:46 -0300
 
