--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gem2deb (0.37) unstable; urgency=medium
+
+  [ Georg Faerber ]
+  * dh-make-ruby:
+    - Bump Standards-Version to 4.1.3.
+
+ -- Georg Faerber <georg@riseup.net>  Mon, 19 Feb 2018 23:25:58 +0100
+
 gem2deb (0.36) unstable; urgency=medium
 
   * dh-make-ruby:
