--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ gem2deb (0.37) unstable; urgency=medium
   [ Georg Faerber ]
   * dh-make-ruby:
     - Bump Standards-Version to 4.1.3.
+    - Bump debhelper compat level to 11.
 
  -- Georg Faerber <georg@riseup.net>  Mon, 19 Feb 2018 23:25:58 +0100
 
