--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 gem2deb (0.37) unstable; urgency=medium
 
   [ Georg Faerber ]
+  * debian/control:
+    - Add myself as uploader.
   * dh-make-ruby:
     - Bump Standards-Version to 4.1.3.
     - Bump debhelper compat level to 11.
