--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ gem2deb (0.37) unstable; urgency=medium
   [ Georg Faerber ]
   * debian/control:
     - Add myself as uploader.
+    - Bump Standards-Version to 4.1.3, no changes needed.
   * dh-make-ruby:
     - Bump Standards-Version to 4.1.3.
     - Bump debhelper compat level to 11.
