--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 gem2deb (0.37) unstable; urgency=medium
 
   [ Georg Faerber ]
+  * debian/compat:
+    - Bump debhelper compat level to 11.
   * debian/control:
     - Add myself as uploader.
     - Bump Standards-Version to 4.1.3, no changes needed.
