--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ gem2deb (0.37) unstable; urgency=medium
   * debian/control:
     - Add myself as uploader.
     - Bump Standards-Version to 4.1.3, no changes needed.
+    - Bump required debhelper version to >= 11~.
   * dh-make-ruby:
     - Bump Standards-Version to 4.1.3.
     - Bump debhelper compat level to 11.
