--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ gem2deb (0.37) unstable; urgency=medium
     - Add myself as uploader.
     - Bump Standards-Version to 4.1.3, no changes needed.
     - Bump required debhelper version to >= 11~.
+    - Use salsa.d.o in Vcs-{Browser,Git} fields.
   * dh-make-ruby:
     - Bump Standards-Version to 4.1.3.
     - Bump debhelper compat level to 11.
