--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ gem2deb (0.37) unstable; urgency=medium
     - Bump Standards-Version to 4.1.3, no changes needed.
     - Bump required debhelper version to >= 11~.
     - Use salsa.d.o in Vcs-{Browser,Git} fields.
+    - Drop obsolete Testsuite field.
   * dh-make-ruby:
     - Bump Standards-Version to 4.1.3.
     - Bump debhelper compat level to 11.
