--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ gem2deb (0.37) unstable; urgency=medium
     - Bump required debhelper version to >= 11~.
     - Use salsa.d.o in Vcs-{Browser,Git} fields.
     - Drop obsolete Testsuite field.
+  * debian/copyright:
+    - Use HTTPS in link to copyright format spec.
+    - Point homepage link to salsa.d.o.
   * dh-make-ruby:
     - Bump Standards-Version to 4.1.3.
     - Bump debhelper compat level to 11.
