--- a/debian/changelog
+++ b/debian/changelog
@@ -18,7 +18,11 @@ gem2deb (0.37) unstable; urgency=medium
     - Use salsa.d.o in Vcs-{Browser,Git} fields.
     - Use HTTPS in link to copyright format spec.
 
- -- Georg Faerber <georg@riseup.net>  Mon, 19 Feb 2018 23:25:58 +0100
+  [ Samuel Henrique ]
+  * dh-make-ruby:
+    - Use HTTPS in debian/watch template.
+
+ -- Georg Faerber <georg@riseup.net>  Tue, 20 Feb 2018 00:07:17 +0100
 
 gem2deb (0.36) unstable; urgency=medium
 
