--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,14 @@
 gem2deb (0.38) UNRELEASED; urgency=medium
 
+  [ Antonio Terceiro ]
   * dh_ruby_fixdepends: include upper bound on ruby versions provided by
     ruby-all-dev (Closes: #889470)
+
+  [ Cédric Boutillier ]
+  * gem2tgz:
+    - Deprecate SHA1, and replace by SHA256
+    - Ensure that at least one of the checkable digests is listed in
+      checksums.yaml.gz instead of forcing all of them to be available
 
  -- Antonio Terceiro <terceiro@debian.org>  Sun, 25 Feb 2018 21:07:16 -0300
 
