--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.38) UNRELEASED; urgency=medium
+gem2deb (0.38) unstable; urgency=medium
 
   [ Antonio Terceiro ]
   * dh_ruby_fixdepends: include upper bound on ruby versions provided by
@@ -10,7 +10,7 @@ gem2deb (0.38) UNRELEASED; urgency=medium
     - Ensure that at least one of the checkable digests is listed in
       checksums.yaml.gz instead of forcing all of them to be available
 
- -- Antonio Terceiro <terceiro@debian.org>  Sun, 25 Feb 2018 21:07:16 -0300
+ -- Cédric Boutillier <boutil@debian.org>  Sun, 04 Mar 2018 20:47:35 +0100
 
 gem2deb (0.37) unstable; urgency=medium
 
