--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (0.39) unstable; urgency=medium
+
+  * dh-make-ruby: use gemwatch.debian.net for debian/watch
+
+ -- Antonio Terceiro <terceiro@debian.org>  Thu, 12 Apr 2018 16:52:42 -0300
+
 gem2deb (0.38.1) unstable; urgency=medium
 
   * dh_ruby_fixdepends: don't touch dependencies of packages that do not
