--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (0.40) UNRELEASED; urgency=medium
+
+  * Remove Vincent Fourmond from Uploaders: by his request (Closes: #897289)
+
+ -- Antonio Terceiro <terceiro@debian.org>  Tue, 01 May 2018 15:39:07 -0300
+
 gem2deb (0.39) unstable; urgency=medium
 
   * dh-make-ruby: use gemwatch.debian.net for debian/watch
