--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+gem2deb (0.44) UNRELEASED; urgency=medium
+
+  [ Georg Faerber ]
+  * bin/gem2deb-test-runner: fix typo
+
+  [ Utkarsh Gupta ]
+  * Add salsa-ci.yml
+
+ -- Utkarsh Gupta <guptautkarsh2102@gmail.com>  Tue, 13 Aug 2019 03:04:59 +0530
+
 gem2deb (0.43) unstable; urgency=medium
 
   * gem2deb-test-runner: deprecate --check-dependencies-only
