--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,13 @@ gem2deb (0.44) UNRELEASED; urgency=medium
   [ Utkarsh Gupta ]
   * Add salsa-ci.yml
 
- -- Utkarsh Gupta <guptautkarsh2102@gmail.com>  Tue, 13 Aug 2019 03:04:59 +0530
+  [ Cédric Boutillier ]
+  * Update templates for new packages
+    - Set debhelper compat level to 12
+    - Add salsa-ci config file
+    - Set Standards-Version to 4.4.0 in template
+
+ -- Cédric Boutillier <boutil@debian.org>  Wed, 14 Aug 2019 16:59:42 +0200
 
 gem2deb (0.43) unstable; urgency=medium
 
