--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+gem2deb (0.45) UNRELEASED; urgency=medium
+
+  [ Frank Schaefer ]
+  * tweak Gem::Ext::*Builder usage for ruby 2.6
+
+  [ Antonio Terceiro ]
+  * gem2tgz: always extract tarballs as the current user
+  * dh_ruby: drop remaining mention of rubygems usage check
+  * dh_ruby: drop remaining mention of rubygems usage check
+  * gem2deb-test-runner manpage: remove truncated sentence
+
+  [ Joseph Herlant ]
+  * Move away the Gemfile.lock during tests to avoid bundler issues.
+
+  [ Utkarsh Gupta ]
+  * Update version=3 to 4 in d/watch
+  * Use gem_name instead of source_package_name in d/upstream/metadata
+
+ -- Utkarsh Gupta <guptautkarsh2102@gmail.com>  Mon, 23 Sep 2019 01:17:19 +0530
+
 gem2deb (0.44) unstable; urgency=medium
 
   [ Georg Faerber ]
