--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (1.0.2) unstable; urgency=medium
+
+  * autopkgtest: add tests for gem2deb and gem2deb-test-runner
+  * gem2deb-test-runner: ship Gem2Deb::PackageNameMapping
+
+ -- Antonio Terceiro <terceiro@debian.org>  Tue, 07 Jan 2020 11:08:05 -0300
+
 gem2deb (1.0.1) unstable; urgency=medium
 
   * Gem2Deb::Metadata: pass global parameter forward.
