--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (1.0.4) unstable; urgency=medium
+
+  * Gem2Deb::Metadata: drop alternative dependency on ruby-interpreter
+  * Build Ruby C extensions reproducibly
+
+ -- Antonio Terceiro <terceiro@debian.org>  Wed, 05 Feb 2020 13:46:53 +0100
+
 gem2deb (1.0.3) unstable; urgency=medium
 
   * debian/rules: don't duplicate list of files owned by gem2deb-test-runner
