--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (1.0.5~bpo10+1) buster-backports; urgency=medium
+
+  * Rebuild for buster-backports.
+
+ -- Pirate Praveen <praveen@debian.org>  Sun, 29 Mar 2020 14:32:33 +0530
+
 gem2deb (1.0.5) unstable; urgency=medium
 
   [ Antonio Terceiro ]
