--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (1.2) UNRELEASED; urgency=medium
+
+  * Support dependency checks with multiple binaries (Closes: #950629).
+
+ -- Marc Dequènes (Duck) <Duck@DuckCorp.org>  Mon, 22 Jun 2020 17:09:15 +0900
+
 gem2deb (1.1) unstable; urgency=medium
 
   [ Antonio Terceiro ]
