--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
 gem2deb (1.2) UNRELEASED; urgency=medium
 
+  [ Marc Dequènes (Duck) ]
   * Support dependency checks with multiple binaries (Closes: #950629).
+  * gem2deb/source: complement existing tests
 
- -- Marc Dequènes (Duck) <Duck@DuckCorp.org>  Mon, 22 Jun 2020 17:09:15 +0900
+  [ Utkarsh Gupta ]
+  * Add frozen_string_literal comments.
+  * Bump dh-compat to 13.
+
+ -- Utkarsh Gupta <utkarsh@debian.org>  Fri, 26 Jun 2020 03:34:02 +0530
 
 gem2deb (1.1) unstable; urgency=medium
 
