--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (1.1~bpo10+1) buster-backports; urgency=medium
+
+  * Rebuild for buster-backports.
+
+ -- Sruthi Chandran <srud@debian.org>  Sat, 04 Jul 2020 22:06:56 +0530
+
 gem2deb (1.1) unstable; urgency=medium
 
   [ Antonio Terceiro ]
