--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,12 @@
-gem2deb (1.2) UNRELEASED; urgency=medium
+gem2deb (1.2) unstable; urgency=medium
 
   [ Marc Dequènes (Duck) ]
   * Support dependency checks with multiple binaries (Closes: #950629).
-  * gem2deb/source: complement existing tests
 
   [ Utkarsh Gupta ]
-  * Add frozen_string_literal comments.
-  * Bump dh-compat to 13.
+  * Bump debhelper-compat to 13
 
- -- Utkarsh Gupta <utkarsh@debian.org>  Fri, 26 Jun 2020 03:34:02 +0530
+ -- Antonio Terceiro <terceiro@debian.org>  Mon, 06 Jul 2020 16:52:33 -0300
 
 gem2deb (1.1) unstable; urgency=medium
 
