--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (1.3+fto10+1) buster-fasttrack; urgency=medium
+
+  * Rebuild for buster-fasttrack.
+  * Build and Depend on ruby-all-dev 2.7
+
+ -- Pirate Praveen <praveen@debian.org>  Tue, 14 Jul 2020 17:57:26 +0530
+
 gem2deb (1.2) unstable; urgency=medium
 
   [ Marc Dequènes (Duck) ]
