--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (1.3+nmu1) UNRELEASED; urgency=medium
+
+  * Non-maintainer upload.
+  * Annotate ruby interpreter dependencies with :any. (Closes: #970470)
+
+ -- Helmut Grohne <helmut@subdivi.de>  Wed, 16 Sep 2020 21:13:17 +0200
+
 gem2deb (1.3) unstable; urgency=medium
 
   [ Chris Hofstaedtler ]
