--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,9 @@
 gem2deb (1.3+nmu1) UNRELEASED; urgency=medium
 
-  [ Helmut Grohne ]
   * Non-maintainer upload.
   * Annotate ruby interpreter dependencies with :any. (Closes: #970470)
 
-  [ Cédric Boutillier ]
-  * Depend explicitly on dpkg-dev so that gem2deb-test-runner can parse
-    changelogs outside of a building environment (Closes: #968869)
-
- -- Cédric Boutillier <boutil@debian.org>  Tue, 13 Oct 2020 17:18:57 +0200
+ -- Helmut Grohne <helmut@subdivi.de>  Wed, 16 Sep 2020 21:13:17 +0200
 
 gem2deb (1.3) unstable; urgency=medium
 
