--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,16 @@
-gem2deb (1.3+nmu1) UNRELEASED; urgency=medium
+gem2deb (1.4) UNRELEASED; urgency=medium
 
-  * Non-maintainer upload.
+  [ Helmut Grohne ]
   * Annotate ruby interpreter dependencies with :any. (Closes: #970470)
 
- -- Helmut Grohne <helmut@subdivi.de>  Wed, 16 Sep 2020 21:13:17 +0200
+  [ Antonio Terceiro ]
+  * test_helper: fix code coverage configuration
+
+  [ Lucas Kanashiro ]
+  * Do not add extensions to the generated gemspec (Closes: #972702)
+  * Add myself to the Uploaders list
+
+ -- Lucas Kanashiro <kanashiro@debian.org>  Fri, 30 Oct 2020 11:46:14 -0300
 
 gem2deb (1.3) unstable; urgency=medium
 
