--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (1.5) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Debian Ruby Team <pkg-ruby-extras-maintainers@lists.alioth.debian.org>  Wed, 04 Nov 2020 13:00:38 +0100
+
 gem2deb (1.4) unstable; urgency=medium
 
   [ Helmut Grohne ]
