--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 gem2deb (1.5) UNRELEASED; urgency=medium
 
+  [ Debian Ruby Team ]
   * 
+
+  [ Daniel Leidert ]
+  * lib/gem2deb/dh_make_ruby/template/debian/watch: Add regex for matching the
+    sources on github.
 
  -- Debian Ruby Team <pkg-ruby-extras-maintainers@lists.alioth.debian.org>  Wed, 04 Nov 2020 13:00:38 +0100
 
