--- a/HACKING
+++ b/HACKING
@@ -8,5 +8,5 @@ version on your system just to be able to that.
 $ . /path/to/gem2deb/tools/shell.bash
 
 This will make the programs in bin/ available in your $PATH, the Ruby code in
-lib/ available for Ruby and the debhelper Perl code in debhelper7/ available
+lib/ available for Ruby and the debhelper Perl code in debhelper/ available
 for debhelper.
