--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gem2deb (2.0.1) unstable; urgency=medium
+
+  * dh-make-ruby: fix loading package names map
+  * Bump Standards-Version to 4.6.1; no changes needed
+  * dh-make-ruby: bump Standards-Version in template to 4.6.1
+
+ -- Antonio Terceiro <terceiro@debian.org>  Thu, 28 Jul 2022 14:40:44 -0300
+
 gem2deb (2.0) unstable; urgency=medium
 
   [ Daniel Leidert ]
