--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gem2deb (2.0.3) unstable; urgency=medium
+
+  * Gem2Deb::YAML: fix loading more metadata.yml files.
+    I have now tried every metadata.yml in the archive and this should be
+    fixed for good.
+
+ -- Antonio Terceiro <terceiro@debian.org>  Sat, 30 Jul 2022 20:44:54 -0300
+
 gem2deb (2.0.2) unstable; urgency=medium
 
   * gem installer: exclude doc/* by default
